Fix example code on mobile

--- a/styles/homepage.scss
+++ b/styles/homepage.scss
@@ -18,3 +18,12 @@
   border-radius: 10px;
   padding: 10px;
 }
+
+#masthead .code-container {
+  max-width: 90%;
+}
+
+#masthead .code-container pre {
+  overflow: auto;
+  max-width: 100%;
+}
